Resolved plugin popup content visibility issue.

--- a/assets/css/plugin-details.css
+++ b/assets/css/plugin-details.css
@@ -14,7 +14,7 @@
 
 #gfgs-plugin-details {
     padding: 0 !important;
-    display: block !important;
+    display: none;
     height: 100%;
     width: 100%;
 }
